--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	  lang ="en" xml:lang = "en">
   <head>
     <title>Vector Escape</title>
-    <meta name="viewport" content="initial-scale=1.0;
-				   maximum-scale=1.0;
-				   user-scalable=0;">
+    <meta name="viewport" content="initial-scale=1.0,
+				   maximum-scale=1.0,
+				   user-scalable=0">
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta charset="utf-8">
